test/files/neg/noMember2.check
noMember2.scala:2: error: object MultiMap is not a member of package collection.mutable
Note: trait MultiMap exists, but it has no companion object.
  val m = scala.collection.mutable.MultiMap(1, 2, 3)
                                   ^
one error found
